<resources>
    <string name="app_name">Physio Assist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Measurement screen
    <string name="actual_degree_measuring">%1$d°</string>
    <string name="final_degree_measured">%1$d°</string>
    <string name="ready_to_measure">Listo para medir</string>
    <string name="last_5_measures">Ultimas 5 mediciones:</string>
    <string name="last_5_1">1: %1$d°  %2$s</string>
    <string name="last_5_2">2: %1$d° %2$s</string>
    <string name="last_5_3">3: %1$d° %2$s</string>
    <string name="last_5_4">4: %1$d° %2$s</string>
    <string name="last_5_5">5: %1$d° %2$s</string>
    <string name="change_axis_being_measured">%1$s is now being measured</string>
    <string-array name="joints">
        <item>Cadera</item>
        <item>Cervical Inferior</item>
        <item>Cervical Superior</item>
        <item>Codo</item>
        <item>Hombro</item>
        <item>Rodilla</item>
        <item>Tobillo</item>
        <item>Torax</item>
        <item>Lumbar</item>
        <item>Muñeca</item>
    </string-array>

    <string-array name="movements">
        <item>Abduccion</item>
        <item>Aduccion</item>
        <item>Desviacion Cubita</item>
        <item>Desvicacion Radial</item>
        <item>Extension</item>
        <item>Flexion</item>
        <item>Flexoextension</item>
        <item>Inclinacion</item>
        <item>Supinacion</item>
        <item>Pronacion</item>
        <item>Rotacion</item>
        <item>Rotacion Interna</item>
        <item>Rotacion Externa</item>
    </string-array>

    <string-array name="movements_cadera">
        <item>Abduccion</item>
        <item>Extension</item>
        <item>Flexion</item>
        <item>Rotacion Interna</item>
        <item>Rotacion Externa</item>
    </string-array>

    <string-array name="movements_rodilla">
        <item>Extension</item>
        <item>Flexion</item>
        <item>Rotacion Interna</item>
        <item>Rotacion Externa</item>
    </string-array>

    <string-array name="movements_tobillo">
        <item>Extension</item>
        <item>Flexion</item>
        <item>Supinacion</item>
        <item>Pronacion</item>
    </string-array>

    <string-array name="movements_lumbar">
        <item>Extension</item>
        <item>Flexion</item>
        <item>Inclinacion</item>
        <item>Rotacion</item>
    </string-array>

    <string-array name="movements_torax">
        <item>Extension</item>
        <item>Flexion</item>
        <item>Inclinacion</item>
        <item>Rotacion</item>
    </string-array>

    <string-array name="movements_cervical_inferior">
        <item>Flexoextension</item>
        <item>Inclinacion</item>
        <item>Rotacion</item>
    </string-array>

    <string-array name="movements_cervical_superior">
        <item>Flexoextension</item>
        <item>Inclinacion</item>
        <item>Rotacion</item>
    </string-array>

    <string-array name="movements_hombro">
        <item>Abduccion</item>
        <item>Aduccion</item>
        <item>Extension</item>
        <item>Flexion</item>
        <item>Inclinacion</item>
        <item>Rotacion Interna</item>
        <item>Rotacion Externa</item>
    </string-array>

    <string-array name="movements_codo">
        <item>Extension</item>
        <item>Flexion</item>
        <item>Supinacion</item>
        <item>Pronacion</item>
    </string-array>

    <string-array name="movements_muñeca">
        <item>Extension</item>
        <item>Flexion</item>
        <item>Desviacion Cubita</item>
        <item>Desvicacion Radial</item>
    </string-array>

    //Login screen
    <string name="login_authenticating">Autenticando..</string>
    <string name="create_authenticating">Creando cuenta..</string>
    <string name="login_tag">Login</string>
    <string name="login_complete_both_fields">Complete ambos campos</string>
    <string name="login_complete_all_fields">Complete todos los campos</string>
    <string name="login_incorrect_credentials">Email o password incorrectos</string>
    <string name="login_name_surname_required">Campo nombre requerido</string>
    <string name="login_username_required">Campo usuario requerido</string>
    <string name="login_email_required">Campo email requerido</string>
    <string name="login_password_required">Campo password requerido</string>
    <string name="login_email">Email</string>
    <string name="login_name">Nombre</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_text">No tienes una cuenta? Create una</string>
    <string name="signin_already_account_text">Ya sos miembro? Login</string>
    <string name="signup_button">Crear cuenta</string>
    <string name="create_account_problem">Hubo un problema, intente de nuevo</string>

    //Patients screen
    <string name="search_hint">Buscar</string>
    <string name="add_patient_name_hint">Nombre</string>
    <string name="add_patient_surname_hint">Apellido</string>
    <string name="add_patient_surname_required">Campo apellido requerido</string>
    <string name="add_patient_age">Edad</string>
    <string name="add_patient_email">Email</string>
    <string name="add_patient_button">Agregar Paciente</string>
    <string name="edit_patient_button">Editar Paciente</string>
    <string name="add_patient_diagnostic">Diagnostico</string>
    <string name="add_patient_required_message">Complete los campos requeridos primero</string>
    <string name="patient_item_name">%1$s %2$s</string>
    <string name="delete_patient_button">Eliminar paciente</string>
    <string name="patients_fragment_title">Pacientes</string>
    <string name="no_patients_text">Por favor agregue un paciente</string>

</resources>
